<?xml version="1.0" encoding="utf-8"?>

<!--
15-05-2019
Muhammad Ilyas
10116339
IF -8
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment"
    android:orientation="vertical"
    >



    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/me" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nim"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colortext"
        android:textSize="16sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kelas"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/colortext"
        android:textSize="16sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/iden"
        android:padding="20dp"
        android:textColor="@android:color/white"
        android:textAlignment="center" />




</LinearLayout>