<?xml version="1.0" encoding="utf-8"?>

<!--
15-05-2019
Muhammad Ilyas
10116339
IF -8
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.ProfilFragment"
    android:orientation="vertical"
    >

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:background="@color/coba">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_profil"
            android:textColor="@color/colorfragtext"
            android:textSize="26dp"
            />
    </android.support.v7.widget.Toolbar>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/gambar"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:src="@drawable/me" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="20sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        >

        <RelativeLayout
            android:id="@+id/telp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/item_background">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/telepon"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="14dp"
                android:paddingBottom="20dp"
                android:src="@drawable/hp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="13dp"
                android:text="@string/telepon"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="30dp"
                android:text="@string/no"
                android:textColor="@android:color/white" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/item_background">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/email"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="14dp"
                android:paddingBottom="20dp"
                android:src="@drawable/mail" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="13dp"
                android:text="@string/email"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="30dp"
                android:text="@string/iemail"
                android:textColor="@android:color/white" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/item_background">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/fb"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="14dp"
                android:paddingBottom="20dp"
                android:src="@drawable/ic_icons8_facebook_old"
                android:tint="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="13dp"
                android:text="@string/fb"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="30dp"
                android:text="@string/ifb"
                android:textColor="@android:color/white" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/steam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/item_background">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/steam"
                android:paddingStart="20dp"
                android:paddingTop="20dp"
                android:paddingEnd="14dp"
                android:paddingBottom="20dp"
                android:src="@drawable/ic_icons8_steam" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="13dp"
                android:text="@string/steam"
                android:textColor="@android:color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="30dp"
                android:text="@string/isteam"
                android:textColor="@android:color/white" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>