<?xml version="1.0" encoding="utf-8"?>

<!--
15-05-2019
Muhammad Ilyas
10116339
IF -8
-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    >

    <LinearLayout
        android:layout_marginTop="55dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >

        <TextView
            android:id="@+id/nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Contact name"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="24sp"
            android:layout_marginTop="75dp"
            />

        <TextView
            android:id="@+id/nim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="NIM"
            android:textColor="@android:color/white"
            android:layout_marginTop="8dp"
            />

        <TextView
            android:id="@+id/kelas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:text="NIM"
            android:textColor="@android:color/white"
            android:layout_marginBottom="15dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:background="@android:color/white"
            android:padding="23dp"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:id="@+id/t"
                    android:layout_width="159dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/email"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="19dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="170dp"
                    android:text=":"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="-23dp"
                    android:text="@string/email"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:id="@+id/e"
                    android:layout_width="159dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/telepon"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="19dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="170dp"
                    android:text=":"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/telepon"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="-23dp"
                    android:text="@string/telepon"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TextView
                    android:layout_width="159dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:text="@string/fb"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="19dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="170dp"
                    android:text=":"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/fb"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="-23dp"
                    android:text="@string/fb"
                    android:textColor="@android:color/black"
                    android:textStyle="bold"
                    />
            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

    <ImageView
        android:id="@+id/gambar"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-12dp"
        android:padding="15dp"
        android:src="@drawable/dog" />



</RelativeLayout>